<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_light">

    <TextView
        android:id="@+id/label_title"
        style="@style/TextView.Medium"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_2x"
        android:layout_marginTop="?android:actionBarSize"
        android:gravity="center_horizontal"
        android:text="@string/do_you_want_to_charge_fast"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vw_turtle"
        android:layout_width="@dimen/dimen_140"
        android:layout_height="@dimen/dimen_140"
        android:layout_marginTop="@dimen/dimen_6x"
        android:background="@drawable/bg_border_white_circle"
        app:layout_constraintEnd_toStartOf="@+id/vw_rocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_title" />

    <ImageView
        android:id="@+id/img_normal_charge"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/dimen_05x"
        android:background="@drawable/bg_white_round"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_2x"
        app:layout_constraintBottom_toBottomOf="@+id/vw_turtle"
        app:layout_constraintEnd_toEndOf="@+id/vw_turtle"
        app:layout_constraintStart_toStartOf="@+id/vw_turtle"
        app:layout_constraintTop_toTopOf="@+id/vw_turtle"
        app:srcCompat="@drawable/ic_turtle" />

    <TextView
        android:id="@+id/label_normal_charge"
        style="@style/TextView.Regular"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4x"
        android:gravity="center_horizontal"
        android:text="@string/normal_charge"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@+id/vw_turtle"
        app:layout_constraintStart_toStartOf="@+id/vw_turtle"
        app:layout_constraintTop_toBottomOf="@+id/vw_turtle" />

    <View
        android:id="@+id/vw_rocket"
        android:layout_width="@dimen/dimen_140"
        android:layout_height="@dimen/dimen_140"
        android:background="@drawable/bg_border_white_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vw_turtle"
        app:layout_constraintTop_toTopOf="@+id/vw_turtle" />

    <ImageView
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/dimen_05x"
        android:background="@drawable/bg_white_round"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_x3x"
        app:layout_constraintBottom_toBottomOf="@+id/vw_rocket"
        app:layout_constraintEnd_toEndOf="@+id/vw_rocket"
        app:layout_constraintStart_toStartOf="@+id/vw_rocket"
        app:layout_constraintTop_toTopOf="@+id/vw_rocket"
        app:srcCompat="@drawable/ic_rocket" />

    <TextView
        style="@style/TextView.Regular"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/quick_charge"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_normal_charge"
        app:layout_constraintEnd_toEndOf="@+id/vw_rocket"
        app:layout_constraintStart_toStartOf="@+id/vw_rocket" />

    <TextView
        android:id="@+id/btn_no"
        style="@style/Button.Grey"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2x"
        android:gravity="center_horizontal"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@+id/vw_turtle"
        app:layout_constraintStart_toStartOf="@+id/vw_turtle"
        app:layout_constraintTop_toBottomOf="@+id/label_normal_charge" />

    <TextView
        android:id="@+id/btn_yes"
        style="@style/Button.Green"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_no"
        app:layout_constraintEnd_toEndOf="@+id/vw_rocket"
        app:layout_constraintStart_toStartOf="@+id/vw_rocket" />

    <TextView
        style="@style/TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toTopOf="@+id/label_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_app_name"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_1x"
        android:text="@string/x2_charger"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
