<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMainTop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgMainTop"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lt_stars"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="@dimen/dimen_120"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_8x"
            android:layout_marginBottom="@dimen/dimen_4x"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lt_tick_done_effect" />

        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_x4x"
            android:layout_marginTop="@dimen/dimen_3x"
            android:elevation="@dimen/dimen_1x"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/dimen_2x">

            <TextView
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/great"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2x"
                android:gravity="center_horizontal"
                android:text="@string/your_device_ready_for_quick_charge"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btn_ok"
                style="@style/Button.Green"
                android:background="@drawable/bg_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2x"
                android:paddingHorizontal="@dimen/dimen_8x"
                android:text="@string/ok"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>

        <com.sh.entertainment.fastcharge.widget.ads.LayoutNativeAd
            android:id="@+id/nativeAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dimen_1x"
            android:padding="@dimen/dimen_1x" />
    </LinearLayout>
</ScrollView>

