<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_light">

    <ImageView
        android:id="@+id/img_logo"
        style="@style/TextView.Italic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_app_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.sh.entertainment.fastcharge.ui.custom.CustomTextView
        android:id="@+id/img_app_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_120"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:src="@drawable/img_app_name"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.sh.entertainment.fastcharge.ui.custom.CustomTextView
        android:id="@+id/txt_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/txt_loading"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/dimen_05x"
        android:layout_marginHorizontal="@dimen/dimen_x4x"
        android:layout_marginBottom="@dimen/dimen_30"
        android:progressDrawable="@drawable/bg_progress_loading"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txt_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.sh.entertainment.fastcharge.ui.custom.CustomTextView
        android:id="@+id/txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30"
        android:text="@string/txt_user_easy"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
